--- a/vignettes/blacksheep_RNA.Rmd
+++ b/vignettes/blacksheep_RNA.Rmd
@@ -128,7 +128,7 @@ to help turn a multifactor column into several binary columns
 expanded_compcols = make_comparison_columns(compcols[,1,drop=FALSE])
 ## Append new columns to the comparison annotation table
 comptable = cbind.data.frame(expanded_compcols, compcols[2:ncol(compcols)],
-                             stringsAsFactors = FALSE)
+                            stringsAsFactors = FALSE)
 head(comptable)
 ```
 
@@ -156,8 +156,9 @@ and the annotation data must be formatted as a DATAFRAME.
 ```{r summarized experiment}
 suppressPackageStartupMessages(library(SummarizedExperiment))
 
-blacksheep_SE = SummarizedExperiment(assays=list(counts=as.matrix(rnatable)), 
-                                    colData=DataFrame(comptable))
+blacksheep_SE = SummarizedExperiment(
+    assays=list(counts=as.matrix(rnatable)), 
+    colData=DataFrame(comptable))
 blacksheep_SE
 ```
 
@@ -169,8 +170,8 @@ specific query or alteration. In the general case, the `blacksheep` function on
 its own should be sufficient for the desired analysis.
 ```{r deva, fig.keep="none"}
 deva_out = deva(blacksheep_SE,
-    analyze_negative_outliers = FALSE, aggregate_features = FALSE,
-    fdrcutoffvalue = 0.1, write_out = FALSE)
+    analyze_negative_outliers = FALSE, aggregate_features = FALSE, 
+    fraction_samples_cutoff = 0.3, fdrcutoffvalue = 0.1, write_out = FALSE)
 ```
 
 The output from blacksheep are lists with the desired results. The number of 
@@ -252,12 +253,14 @@ parameter is set to analyze negative outliers, then -1 means an outlier in the
 negative direction.
 
 The output from this function is a list of objects, that depends on the input 
-and the specified parameters. Namely - it will output a $lowerboundtab only
-if the parameter to analyze negative outliers is turned ON
+and the specified parameters. Namely - it will output a $upperboundtab only
+if the parameter to analyze_negative_outliers is turned OFF, and $lowerboundtab 
+if the analyze_negative_outliers parameter is turned ON
 
 ```{r make outlier table - rna}
 ## Perform the function
-reftable_function_out = make_outlier_table(rnatable)
+reftable_function_out = make_outlier_table(rnatable,
+                                        analyze_negative_outliers = FALSE)
 ## See the names of the outputted objects
 names(reftable_function_out)
 ## Assign them to individual variables
@@ -271,14 +274,15 @@ outliertab[1:5,1:5]
 ```
 
 ### Tabulate Outliers
-For each of our groups, run through the outlier table and count up the total 
-number of outliers and nonoutliers. Note that this will output a list of length
-1 - just with the name "grouptablist". In later iterations, parameters will 
-enable different output. For now though - we are just going to use this single
-embedded list
+For each group, run through and output the number of outliers and nonoutliers 
+per group. The output will be a list each named for the comparison inputted. 
+For each comparison, there will be two items within it - namely the tabulated 
+table, and then also the list of samples that went into that group.
+
 ```{r groupingtablist - rna}
 count_outliers_out = count_outliers(groupings, outliertab)
 grouptablist = count_outliers_out$grouptablist
+fractiontab = count_outliers_out$fractiontab
 
 names(grouptablist)
 ```
@@ -286,15 +290,15 @@ names(grouptablist)
 Each tabulated table has the feature counts, and the stored infor the samples 
 that went into the count
 ```{r}
-names(grouptablist[[1]])
+names(grouptablist$PAM50_Her2__Her2)
 ```
 Example of what the feature counts look like:
 ```{r}
-head(grouptablist[[1]][[1]])
+head(grouptablist$PAM50_Her2__Her2$feature_counts)
 ```
 Example of what the samples are that went into the analysis:
 ```{r}
-grouptablist[[1]][[2]]
+grouptablist$PAM50_Her2__Her2$samples
 ```
 
 
@@ -305,9 +309,11 @@ to write out tables to the external file, we will not use this parameter now,
 but it can be set by turning the to parameter `write_out_tables = TRUE`
 ```{r outlier analysis - rna}
 ## Run the outlier analysis function
-outlier_analysis_out = outlier_analysis(grouptablist)
+outlier_analysis_out = outlier_analysis(grouptablist = grouptablist, 
+                fraction_table = fractiontab, fraction_samples_cutoff = 0.3)
 names(outlier_analysis_out)
-lapply(outlier_analysis_out, head)[1]
+head(outlier_analysis_out$
+        outlieranalysis_for_PAM50_Her2__Her2_vs_PAM50_Her2__not_Her2)
 ```
 
 ### Plot Results using Heatmap Generating Function
@@ -326,8 +332,8 @@ will NOT order it for you.
 plottable = comptable[do.call(order, c(decreasing = TRUE, 
                             data.frame(comptable[,1:ncol(comptable)]))),]
 hm1 = outlier_heatmap(outlier_analysis_out = outlier_analysis_out, 
-                      counttab = rnatable, metatable = plottable, 
-                      fdrcutoffvalue = 0.1)
+                    counttab = fractiontab, metatable = plottable, 
+                    fdrcutoffvalue = 0.1)
 
 ## To output heatmap to pdf outside of the function
 #pdf(paste0(outfilepath, "test_hm1.pdf"))
@@ -335,7 +341,7 @@ hm1 = outlier_heatmap(outlier_analysis_out = outlier_analysis_out,
 #junk<-dev.off()
 ```
 ```{r heatmap plotting example - rna, fig.cap = "Example outputted Heatmap"}
-hm1[[4]]
+hm1$print_outlieranalysis_for_PAM50_Her2__Her2_vs_PAM50_Her2__not_Her2
 ```
 
 
